--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,8 +17,10 @@ if (bonavista_tests)
   add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/third_party/googletest")
 endif()
 
-# C++11.
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
+
 # Include relative to current source dir.
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
