--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(status_lib status.cpp status.h status_or.h)
-target_include_directories(status_lib INTERFACE ${bonavista_SOURCE_DIR})
+add_library(util_lib status.cpp status.h status_or.h)
+target_include_directories(util_lib INTERFACE ${bonavista_SOURCE_DIR})
 
 if (bonavista_tests)
-  add_executable(status_test status_test.cpp status_or_test.cpp)
-  target_link_libraries(status_test gtest_main status_lib)
-  add_test(NAME status_test COMMAND status_test)
+  add_executable(util_test status_test.cpp status_or_test.cpp)
+  target_link_libraries(util_test gtest_main util_lib)
+  add_test(NAME util_test COMMAND util_test)
 endif()
