Some adjustments to Lexer API.

--- a/src/lexer/CMakeLists.txt
+++ b/src/lexer/CMakeLists.txt
@@ -3,7 +3,7 @@ target_link_libraries(lexer_lib util_lib)
 target_include_directories(lexer_lib INTERFACE ${bonavista_SOURCE_DIR})
 
 if (bonavista_tests)
-  add_executable(lexer_test token_stream_test.cpp token_test.cpp)
+  add_executable(lexer_test lexer_test.cpp token_stream_test.cpp token_test.cpp)
   target_link_libraries(lexer_test gtest_main lexer_lib)
   add_test(NAME lexer_test COMMAND lexer_test)
 endif()
