--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,18 @@
-cmake_minimum_required (VERSION 2.8.2)
+cmake_minimum_required (VERSION 3.13.4)
 
 project(bonavista)
+
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
+endif()
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# Include relative to current source dir.
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 option(bonavista_tests "Whether to create test targets." ON)
 if (bonavista_tests)
@@ -14,15 +26,8 @@ if (bonavista_tests)
     WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/third_party/googletest")
   set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
   set(BUILD_GTEST ON CACHE BOOL "" FORCE)
-  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/third_party/googletest")
+  add_subdirectory(third_party/googletest)
 endif()
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
-
-# Include relative to current source dir.
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(json EXCLUDE_FROM_ALL)
 add_subdirectory(lexer)
