--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,7 @@ execute_process(COMMAND "${CMAKE_COMMAND}" -G "${CMAKE_GENERATOR}" .
   WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/third_party/absl")
 execute_process(COMMAND "${CMAKE_COMMAND}" --build .
   WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/third_party/absl")
-add_subdirectory(third_party/absl)
+add_subdirectory(third_party/absl EXCLUDE_FROM_ALL)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/absl)
 
 option(bonavista_tests "Whether to create test targets." ON)
@@ -35,9 +35,9 @@ if (bonavista_tests)
     WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/third_party/googletest")
   set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
   set(BUILD_GTEST ON CACHE BOOL "" FORCE)
-  add_subdirectory(third_party/googletest)
+  add_subdirectory(third_party/googletest EXCLUDE_FROM_ALL)
 endif()
 
-add_subdirectory(json EXCLUDE_FROM_ALL)
+add_subdirectory(json)
 add_subdirectory(lexer)
 add_subdirectory(parser)
