--- a/src/util/BUILD
+++ b/src/util/BUILD
@@ -1,6 +1,13 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
+    name = "error",
+    hdrs = ["error.h"],
+    srcs = ["error.cpp"],
+    deps = ["@com_google_absl//absl/status"],
+)
+
+cc_library(
     name = "status_macros",
     hdrs = ["status_macros.h"],
 )
